<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gymnocalycium">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/gymnocalycium"
                android:textSize="@dimen/_16sdp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:contentDescription="@string/cactus"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/gymno_cactus" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:gravity="center"
                android:text="@string/overview"
                android:textSize="@dimen/_16sdp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:id="@+id/overviewTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/gymno_overview"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:gravity="center"
                android:text="@string/requirement"
                android:textSize="@dimen/_16sdp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:id="@+id/requirementTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/gymno_requirement"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/variety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:gravity="center"
                android:text="@string/variety"
                android:textSize="@dimen/_16sdp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:id="@+id/varietyTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/gymno_variety"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/_10sdp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>